# canon-temp

./: .gitignore  README.md
.github/: COPILOT_INSTRUCTIONS.md
backend/: .gitignore  README.md  check_db.py  pyproject.toml
backend/app/: main.py
backend/app/api/: api_router.py  payload_mapper.py  ws_router.py
backend/app/core/: __init__.py  config.py  paths.py
backend/app/models/: __init__.py  sift.py  target_matching.py  target_model.py  warping.py  yolo_ood.py  yolo_test.py
backend/app/service/: __init__.py  classifier_adapter.py  decision_engine.py  detector_adapter.py  operational_db.py  operational_pipeline.py  operational_runtime.py  operational_types.py  preprocess_service.py  sequence_service.py  sequence_stream_service.py  state_service.py  target_service.py  target_test_service.py  video_service.py
backend/data/db/: factory_test.db
backend/scripts/: evaluator.py  openvino.py  resizing.py  run_operational_smoke.py  run_sequence_stream.py  run_sequence_video.py  smoke_test_model.py  target_test.py  test_warping_samples.py  train_target.py  video_noise.py
backend/scripts/data_prep/: agumentation.py  create_img.py  labeling.py
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/.agent/: rules.md
frontend/certs/: desktop.ini  local-cert.pem  local-key.pem
frontend/src/: App.tsx  index.css  locales.ts  store.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
